fixed wrapping footer

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,6 +11,10 @@ body {
   max-width: 100vw;
   overflow: hidden;
 }
+.main-content {
+  overflow: hidden;
+  width: 100%;
+}
 button {
   font: 16px "Josefin Sans", arial, sans-serif;
   font-weight: 300;
